@@ -487,6 +487,14 @@
       permission="zope.View" />
 
   <zope:adapter
+      name="listsubobjects"
+      for="loops.interfaces.INode
+           zope.publisher.interfaces.browser.IBrowserRequest"
+      provides="zope.interface.Interface"
+      factory="loops.browser.node.ListSubobjects"
+      permission="zope.View" />
+
+  <zope:adapter
       name="listchildren"
       for="loops.interfaces.INode
            zope.publisher.interfaces.browser.IBrowserRequest"
