@@ -6,6 +6,7 @@ $Id$
 1.1
 ---
 
+- new special view 'listsubobjects' for nodes
 - allow for adoption of relations to a predicate interface;
   with example implementation for a 'has Role' predicate in loops.organize
 - external collection: provide functionality for automatically populate
